--- a/package.json
+++ b/package.json
@@ -6,8 +6,16 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/Nexum/neat-cache.git"
+  },
   "author": "Dominik Kienzler <d.kienzler@dominik-kienzler.de>",
   "license": "ISC",
+  "peerDependencies": {
+    "bluebird": "^3.4.6",
+    "neat-base": "^1.x.x"
+  },
   "dependencies": {
     "redis": "^2.6.2",
     "request": "^2.75.0"
