--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "neat-base": "^1.x.x"
   },
   "dependencies": {
+    "ape-status": "^1.1.2",
     "redis": "^2.6.2",
     "request": "^2.75.0"
   }
